--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
         - name: macOS
           os: macos-latest
 
-        #- name: iOS
-        #  os: macos-latest
-        #  target: iOS
+        - name: iOS
+          os: macos-latest
+          target: iOS
 
         - name: Android 32-bit
           os: ubuntu-latest
@@ -38,7 +38,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build the mod
-        #uses: RoootTheFox/build-geode-mod@main
         uses: geode-sdk/build-geode-mod@main
         with:
           combine: true
@@ -52,7 +51,6 @@ jobs:
     if: ${{ !endsWith(github.event.head_commit.message, '--nobuild') }}
 
     steps:
-      #- uses: RoootTheFox/build-geode-mod/combine@main
       - uses: geode-sdk/build-geode-mod/combine@main
         id: build
 
